
5.57  2014-11-02
  - Deprecated stringification support in Mojo::Collection.
  - Deprecated Mojo::Collection::pluck in favor of Mojo::Collection::map.
  - Deprecated Mojo::DOM::val.
  - Improved map method in Mojo::Collection to be able to call methods.

5.56  2014-10-29
  - Deprecated Mojo::Collection::AUTOLOAD in favor of Mojo::Collection::pluck.
  - Deprecated Mojo::DOM::AUTOLOAD in favor of Mojo::DOM::children.

5.55  2014-10-28
  - Deprecated support for data arguments in Mojo::JSON::Pointer.
  - Added access_control_allow_origin, content_language, content_location and
    strict_transport_security methods to Mojo::Headers.

5.54  2014-10-23
  - Deprecated object-oriented Mojo::JSON API.
  - Added auto_decompress attribute to Mojo::Content.
  - Improved Mojo::Content to parse content more defensively.
  - Fixed chunked transfer encoding bug in Mojo::Content.
  - Fixed bug where Mojo::UserAgent would try to follow redirects for
    protocols other than HTTP and HTTPS.

5.53  2014-10-20
  - Fixed bug in Mojo::Server where secondary groups were not reassigned
    correctly. (ksm, sri)

5.52  2014-10-18
  - Fixed read-only file system compatibility of Mojo::Asset::File.

5.51  2014-10-17
  - Fixed bug in Mojolicious::Validator::Validation where every_param would
    sometimes return an array reference containing an undef value.
  - Fixed Mojo::ByteStream and Mojo::Collection to always return true in
    boolean context.

5.50  2014-10-15
  - Improved Mojo::DOM::HTML performance slightly.
  - Fixed description list parsing bug in Mojo::DOM::HTML. (Trelane)

5.49  2014-10-10
  - Improved form content generator to allow custom content types.
  - Improved Mojo::Server to load applications consistently for all servers.
    (tianon, sri)
  - Fixed Mojolicious::Static to hide files without extensions in DATA
    sections.
  - Fixed inflate command to ignore files without extensions.
  - Fixed bug in Mojolicious::Routes::Route where formats could be rendered